fixed hover margin-top on upper and lower pointers to janking align

--- a/h/sass/app.scss
+++ b/h/sass/app.scss
@@ -102,7 +102,7 @@ svg { -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
       bottom: 1px;
     }
     &:hover {
-      margin-top: -2px;
+      margin-top: -1.2em;
     }
   }
 
@@ -114,7 +114,7 @@ svg { -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
       top: 1px;
     }
     &:hover {
-      margin-top: 2px;
+      margin-top: -.8em;
     }
   }
   &.flip {
